# nero

./: .env.example  .gitignore  AGENTS.md  main.py  pyproject.toml
src/engine/: rag_retriever.py
src/ingestion/: 1_parse_text.py  2_caption_stickers.py  3_build_index.py
src/training/: train_lora.py
